1. add roles in db while startup of app if not present data in roles table 2. add dto and mapper for Contact and Holiday Entity 3. add AudiAware and create and update time to add by spring-data-jpa while repository.save(..)